# LearnOpenGL

./: .gitignore  .gitmodules  .nvimrc  CMakeLists.txt  GenerateFiles.bat  GenerateFiles.sh  README.md  learnOpenGL.sln  learnOpenGL.vcxproj  learnOpenGL.vcxproj.filters  premake5.lua  shader.vs
actual_app/: Application.cpp
include/: engine.h  gl_utils.h
include/glad/: glad.h
learnOpenGL/x64/Debug/: learnOpenGL.exe.recipe  learnOpenGL.ilk  vc143.idb
learnOpenGL/x64/Debug/learnOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  learnOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
libs/: cglm.lua  glad.lua  glfw.lua  glm.lua  imgui.lua  stb.lua
shaders/: basic.frag  container.frag  cubeWithNormals.vert  lightWithNormals.frag  shader.fs
src/: Application.c  Application.cpp
src++/window/: window.cpp  window.h
src/adapter/glad/: glad.c
src/camera/: camera.cpp  camera.h
src/game/camera/: camera.h
src/game/physics/: gjk.cpp  gjk.h  shape.cpp  shape.h  simplex.h
src/renderer/: gjk.h  renderer.cpp  renderer.h  shader.cpp  shader.h  simplex.h
src/renderer2d/: renderer2d.cpp  renderer2d.h
src/renderer3d/: renderer3d.cpp  renderer3d.h
src/shader/: shader.cpp  shader.h
src/shaders/: Shader.h
src/shape/: shape.cpp  shape.h
src/shape/cuboid/: cuboid.cpp  cuboid.h
src/shape/rectangle/: rectangle.cpp  rectangle.h
src/ui/: window.h
src/window/: window.c  window.cpp  window.h
